# decimal

./: CMakeLists.txt  README.md  README_RUS.md
src/: Makefile  s21_anothers.c  s21_arithmetics.c  s21_comparisons.c  s21_conversions.c  s21_decimal.h  s21_from_float_to_decimal.c  s21_utils.c  s21_utils.h  temp.c
src/tests/: test.c  test_add.c  test_div.c  test_floor.c  test_from_decimal_to_int.c  test_from_float_to_decimal.c  test_is_equal.c  test_is_greater.c  test_is_greater_or_equal.c  test_is_less.c  test_is_less_or_equal.c  test_is_not_equal.c  test_mul.c  test_negate.c  test_round.c  test_sub.c
